--- a/src/output.css
+++ b/src/output.css
@@ -190,6 +190,9 @@
   .invisible {
     visibility: hidden;
   }
+  .visible {
+    visibility: visible;
+  }
   .absolute {
     position: absolute;
   }
