--- a/src/output.css
+++ b/src/output.css
@@ -331,14 +331,29 @@
   .w-\[1\.3rem\] {
     width: 1.3rem;
   }
+  .w-\[1rem\] {
+    width: 1rem;
+  }
+  .w-\[12rem\] {
+    width: 12rem;
+  }
   .w-\[13px\] {
     width: 13px;
+  }
+  .w-\[15rem\] {
+    width: 15rem;
   }
   .w-\[18px\] {
     width: 18px;
   }
+  .w-\[18rem\] {
+    width: 18rem;
+  }
   .w-\[20\.2rem\] {
     width: 20.2rem;
+  }
+  .w-\[20rem\] {
+    width: 20rem;
   }
   .w-\[22rem\] {
     width: 22rem;
@@ -789,6 +804,16 @@
   .lg\:h-\[450px\] {
     @media (width >= 64rem) {
       height: 450px;
+    }
+  }
+  .lg\:w-\[20\.2rem\] {
+    @media (width >= 64rem) {
+      width: 20.2rem;
+    }
+  }
+  .lg\:w-\[20\] {
+    @media (width >= 64rem) {
+      width: 20;
     }
   }
   .lg\:w-\[40rem\] {
